2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
        * General/ChunkArray: use exception instead of notif for missing chk;
          add new enumerators
        * General/EntityChunk.[hm]: use new enumerators; store entities here,
          not in subclasses.
        * General/PSortedArray: new enumerators
        * General/NSArray+Additions.m: allow range out of array

2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
        * FileReader: add support for reading gzipped files
          add control of when a chunk can end
        * PajeEventDecoder: ditto
        * PajeSimulator: ditto

2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
	* add timeLimitsChanged notification for better control of when to
	  recalculate layouts

2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
	* Paje/PajeTraceController.m; PajeSimulator/PajeSimul.m:
	  call missingChunk directly instead of thru a notification

2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
	* Paje/Paje*Controller.[hm]: cleaned finalisation code

2007-02-14  Benhur Stein <benhur@inf.ufsm.br>
	* Paje/Paje.gorm: small changes in interface file

2006-11-02  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/DrawView.m: corrected trackingRect handling
        * SpaceTimeViewer/SpaceTime.gorm: corrected autosizing

2006-10-30  Benhur Stein <benhur@inf.ufsm.br>
        * EntityTypeFilter/EntityTypeSelector.m: indentation;
          removed unused code
        * General/ChunkArray.m,EntityChunk.m,PajeEvent.[hm],PajeType.[hm]:
          removed debug or unused code
        * SpaceTimeViewer/Shape.m: remove unused code
        * PajeEventDecoder/PajeEventDecoder.[hm]: removed unused code
        * PajeSimulator/PajeSimul.[hm],SimulChunk.m,UserLink.m,UserState.m:
          removed unused code
        * AggregatingFilter/AggregatingChunkArray.m: removed unused code
        * StorageController/Encapsulate.m: removed unused code
        * StorageController/*Aggreg*[hm]: removed files moved to
          AggregatingFilter/
